# ndcv-bridge

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  flake.nix  justfile  justfile.bak
.cargo/: config.toml
.github/workflows/: build.yaml  docs.yaml
bbox/: Cargo.toml
bbox/src/: lib.rs
bbox/src/traits/: max.rs  min.rs
bounding-box/: Cargo.toml
bounding-box/fuzz/: Cargo.toml
bounding-box/fuzz/artifacts/fuzz_compat/: crash-c95e339be78e988654b983fc6547347b28bb7af5
bounding-box/fuzz/fuzz_targets/: fuzz_aabb.rs  fuzz_compat.rs  fuzz_nms.rs  fuzz_roi.rs
bounding-box/src/: bbox.rs  compat.rs  draw.rs  lib.rs  nms.rs  roi.rs
ndarray-image/: Cargo.toml
ndarray-image/src/: image.rs  lib.rs  orient.rs  percentile.rs  xdog.rs
ndarray-ops/: Cargo.toml
ndarray-ops/src/: lib.rs  paste.rs
ndarray-ops/src/paste/: algos.rs  channel.rs  channel_paster.rs  color.rs  color_paster.rs  image.rs  image_paster.rs  paste_algos.rs  traits.rs
ndarray-resize/: Cargo.toml
ndarray-resize/src/: lib.rs
ndarray-safetensors/: Cargo.toml
ndarray-safetensors/src/: lib.rs
ndcv-bridge/: Cargo.toml
ndcv-bridge/benches/: blur.rs  conversions.rs  dilate.rs  gaussian.rs
ndcv-bridge/fuzz/: Cargo.toml
ndcv-bridge/fuzz/artifacts/fuzz_roi/: crash-07e9861f863c44993afc34bfeeec6756ef6133ad  crash-2a16bdeaa6cd3b2176e3b89a340cb8440e4a7e0e
ndcv-bridge/fuzz/fuzz_targets/: fuzz_blend.rs  fuzz_conversions.rs  fuzz_fir.rs  fuzz_orient.rs  fuzz_percentile.rs  fuzz_roi.rs
ndcv-bridge/src/: absdiff.rs  affine.rs  blend.rs  blob.rs  blur.rs  bounding_rect.rs  codec.rs  color_space.rs  connected_components.rs  contours.rs  conversions.rs  conversions_v2.rs  dilate.rs  errors.rs  fir.rs  gaussian.rs  image.rs  inplace.rs  lib.rs  morphology.rs  normalize.rs  orient.rs  percentile.rs  resize.rs  roi.rs  sobel.rs  types.rs  warp_affine.rs  xdog.rs
ndcv-bridge/src/codec/: codecs.rs  decode.rs  encode.rs  error.rs
ndcv-bridge/src/conversions/: impls.rs  matref.rs
ndcv-bridge/tests/: conversions_comprehensive.rs  conversions_error_handling.rs  conversions_performance.rs
ndcv-cli/: Cargo.toml
ndcv-cli/src/: io.rs  main.rs  pipeline.rs
ndcv-cli/src/ops/: blend.rs  blur.rs  color.rs  mod.rs  orient.rs  resize.rs  sobel.rs  xdog.rs
