[workspace]
resolver = "2"
members = [
  "ndarray-image",
  "ndarray-resize",
  "ndarray-safetensors",
  "ndcv-bridge",
  "bbox",
]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
divan = { version = "0.1.21" }
ndarray-npy = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
nalgebra = { version = "0.34.0", default-features = false, features = ["std"] }
opencv = { version = "0.95.1", features = ["clang-runtime"] }
bounding-box = { path = "bounding-box" }
bytemuck = "1.23.2"
error-stack = "0.6.0"
thiserror = "2.0"
fast_image_resize = "5.2.0"
img-parts = "0.4.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
num = "0.4"
tap = "1.0.1"
