[package]
name = "bounding-box"
version = "0.1.0"
edition = "2024"

[dependencies]
color = "0.3.1"
itertools = "0.14.0"
nalgebra = { workspace = true }
ndarray = { version = "0.16.1", optional = true }
num = "0.4.3"
ordered-float = "5.0.0"
simba = "0.9.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true, default-features = false }

[features]
ndarray = ["dep:ndarray"]
tracing = ["dep:tracing"]
compat-bbox = []

default = ["ndarray", "tracing", "compat-bbox"]
