[package]
name = "ndarray-image"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bytemuck.workspace = true
derive_builder = "0.20.2"
glam = "0.32.0"
image = "0.25.6"
ndarray = { workspace = true }
ndcv-bridge = { version = "0.4.0", path = "../ndcv-bridge" }
num.workspace = true
opencv.workspace = true
rayon = "1.11.0"
thiserror.workspace = true
wide = "1.2.0"
bounding-box.workspace = true
