[package]
name = "ndcv-bridge"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
bounding-box.workspace = true
nalgebra.workspace = true
bytemuck.workspace = true
error-stack.workspace = true
fast_image_resize.workspace = true
ndarray = { workspace = true, features = ["rayon"] }
num.workspace = true
opencv = { workspace = true, optional = true }
rayon = "1.10.0"
thiserror.workspace = true
tracing = "0.1.41"
wide = "1.1.1"
tap = { workspace = true }
img-parts.workspace = true
pretty_assertions = "1.4.1"
aquamarine = "0.6.0"

[dev-dependencies]
divan.workspace = true
ndarray-npy.workspace = true

[features]
opencv = ["dep:opencv"]
default = ["opencv"]


[[bench]]
name = "conversions"
harness = false

[[bench]]
name = "gaussian"
harness = false
