[package]
name = "ndcv-cli"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[[bin]]
name = "ndcv"
path = "src/main.rs"

[dependencies]
ndcv-bridge = { path = "../ndcv-bridge" }
ndarray-image = { path = "../ndarray-image" }
ndarray = { workspace = true }
image = "0.25.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
clap_complete = "4.5.66"
glam = "0.32.0"
