[package]
name = "bounding-box-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
nalgebra = { version = "0.34.0", default-features = false, features = ["std"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
ordered-float = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dependencies.bounding-box]
path = ".."

[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_aabb"
path = "fuzz_targets/fuzz_aabb.rs"
doc = false

[[bin]]
name = "fuzz_nms"
path = "fuzz_targets/fuzz_nms.rs"
doc = false

[[bin]]
name = "fuzz_roi"
path = "fuzz_targets/fuzz_roi.rs"
doc = false

[[bin]]
name = "fuzz_compat"
path = "fuzz_targets/fuzz_compat.rs"
doc = false
